# bad-apple

./: .gitignore  README.MD
.github/workflows/: build.yml
NDS/: CMakeLists.txt  Makefile
NDS/source/: main.cpp
assets/: convert.sh
encoder/: index.js  package.json
encoder/cpp/: lzss  lzss.hpp  main.cpp
encoder/cpp/test/: lzss.cpp
